<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_create_diary"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/menu_create_diary" />
    <item
        android:id="@+id/nav_saved_diaries"
        android:icon="@drawable/baseline_bookmarks_24"
        android:title="@string/menu_saved_diaries" />
    <item
        android:id="@+id/nav_mood_tracker"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_mood_tracker" />
    <item
        android:id="@+id/nav_user_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/menu_user_profile" />
</menu>
